// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link render correctly with bad variant 1`] = `
<DocumentFragment>
  .cache-ibris0-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #4a4f62;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-ibris0-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-ibris0-StyledLink>* {
  pointer-events: none;
}

.cache-ibris0-StyledLink:hover,
.cache-ibris0-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #4a4f62;
  text-decoration-color: #4a4f62;
}

.cache-ibris0-StyledLink:hover .e4bq1r52,
.cache-ibris0-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-ibris0-StyledLink:hover::after,
.cache-ibris0-StyledLink:focus::after {
  background-color: #4a4f62;
}

.cache-ibris0-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-ibris0-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with href props 1`] = `
<DocumentFragment>
  .cache-qjioss-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-qjioss-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-qjioss-StyledLink>* {
  pointer-events: none;
}

.cache-qjioss-StyledLink:hover,
.cache-qjioss-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-qjioss-StyledLink:hover .e4bq1r52,
.cache-qjioss-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-qjioss-StyledLink:hover::after,
.cache-qjioss-StyledLink:focus::after {
  background-color: #390171;
}

.cache-qjioss-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-qjioss-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with href props 2`] = `
<DocumentFragment>
  .cache-90jdcs-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-90jdcs-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-90jdcs-StyledLink>* {
  pointer-events: none;
}

.cache-90jdcs-StyledLink:hover,
.cache-90jdcs-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-90jdcs-StyledLink:hover .e4bq1r52,
.cache-90jdcs-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(4px, 0);
  -moz-transform: translate(4px, 0);
  -ms-transform: translate(4px, 0);
  transform: translate(4px, 0);
}

.cache-90jdcs-StyledLink:hover::after,
.cache-90jdcs-StyledLink:focus::after {
  background-color: #390171;
}

.cache-90jdcs-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1sfy84i-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<a
    class="cache-90jdcs-StyledLink e4bq1r50"
    href="/"
  >
    <svg
      aria-label="arrow-left"
      class="e4bq1r52 cache-1sfy84i-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 16 16"
    >
      <path
        d="M5.3 8.7a1 1 0 0 1 0-1.4l4-4a1 1 0 1 1 1.4 1.4L7.42 8l3.3 3.3a1 1 0 0 1-1.42 1.4l-4-4Z"
      />
    </svg>
    Hello
  </a>
  .cache-qjioss-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-qjioss-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-qjioss-StyledLink>* {
  pointer-events: none;
}

.cache-qjioss-StyledLink:hover,
.cache-qjioss-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-qjioss-StyledLink:hover .e4bq1r52,
.cache-qjioss-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-qjioss-StyledLink:hover::after,
.cache-qjioss-StyledLink:focus::after {
  background-color: #390171;
}

.cache-qjioss-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1sfy84i-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<a
    class="cache-qjioss-StyledLink e4bq1r50"
    href="/"
  >
    Hello
    <svg
      aria-label="arrow-right"
      class="e4bq1r52 cache-1sfy84i-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 16 16"
    >
      <path
        d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
      />
    </svg>
  </a>
  .cache-qjioss-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-qjioss-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-qjioss-StyledLink>* {
  pointer-events: none;
}

.cache-qjioss-StyledLink:hover,
.cache-qjioss-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-qjioss-StyledLink:hover .e4bq1r52,
.cache-qjioss-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-qjioss-StyledLink:hover::after,
.cache-qjioss-StyledLink:focus::after {
  background-color: #390171;
}

.cache-qjioss-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

<a
    class="cache-qjioss-StyledLink e4bq1r50"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="cache-1tang38-StyledExternalIconContainer e4bq1r51"
    >
      <svg
        aria-label="open-in-new"
        class="e4bq1r52 cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
  .cache-90jdcs-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-90jdcs-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-90jdcs-StyledLink>* {
  pointer-events: none;
}

.cache-90jdcs-StyledLink:hover,
.cache-90jdcs-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-90jdcs-StyledLink:hover .e4bq1r52,
.cache-90jdcs-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(4px, 0);
  -moz-transform: translate(4px, 0);
  -ms-transform: translate(4px, 0);
  transform: translate(4px, 0);
}

.cache-90jdcs-StyledLink:hover::after,
.cache-90jdcs-StyledLink:focus::after {
  background-color: #390171;
}

.cache-90jdcs-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

<a
    class="cache-90jdcs-StyledLink e4bq1r50"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="cache-1tang38-StyledExternalIconContainer e4bq1r51"
    >
      <svg
        aria-label="open-in-new"
        class="e4bq1r52 cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with no variant 1`] = `
<DocumentFragment>
  .cache-qjioss-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-qjioss-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-qjioss-StyledLink>* {
  pointer-events: none;
}

.cache-qjioss-StyledLink:hover,
.cache-qjioss-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-qjioss-StyledLink:hover .e4bq1r52,
.cache-qjioss-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-qjioss-StyledLink:hover::after,
.cache-qjioss-StyledLink:focus::after {
  background-color: #390171;
}

.cache-qjioss-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-qjioss-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with sizes 1`] = `
<DocumentFragment>
  .cache-qjioss-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-qjioss-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-qjioss-StyledLink>* {
  pointer-events: none;
}

.cache-qjioss-StyledLink:hover,
.cache-qjioss-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-qjioss-StyledLink:hover .e4bq1r52,
.cache-qjioss-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-qjioss-StyledLink:hover::after,
.cache-qjioss-StyledLink:focus::after {
  background-color: #390171;
}

.cache-qjioss-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-qjioss-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
  ,
  .cache-1q4px79-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-1q4px79-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-1q4px79-StyledLink>* {
  pointer-events: none;
}

.cache-1q4px79-StyledLink:hover,
.cache-1q4px79-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-1q4px79-StyledLink:hover .e4bq1r52,
.cache-1q4px79-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-1q4px79-StyledLink:hover::after,
.cache-1q4px79-StyledLink:focus::after {
  background-color: #390171;
}

.cache-1q4px79-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-1q4px79-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
  ,
</DocumentFragment>
`;

exports[`Link render correctly with target blank 1`] = `
<DocumentFragment>
  .cache-qjioss-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-qjioss-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-qjioss-StyledLink>* {
  pointer-events: none;
}

.cache-qjioss-StyledLink:hover,
.cache-qjioss-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-qjioss-StyledLink:hover .e4bq1r52,
.cache-qjioss-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-qjioss-StyledLink:hover::after,
.cache-qjioss-StyledLink:focus::after {
  background-color: #390171;
}

.cache-qjioss-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

<a
    class="cache-qjioss-StyledLink e4bq1r50"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="cache-1tang38-StyledExternalIconContainer e4bq1r51"
    >
      <svg
        aria-label="open-in-new"
        class="e4bq1r52 cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link variant render danger 1`] = `
<DocumentFragment>
  .cache-1elb5m0-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #a6102d;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-1elb5m0-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-1elb5m0-StyledLink>* {
  pointer-events: none;
}

.cache-1elb5m0-StyledLink:hover,
.cache-1elb5m0-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #a6102d;
  text-decoration-color: #a6102d;
}

.cache-1elb5m0-StyledLink:hover .e4bq1r52,
.cache-1elb5m0-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-1elb5m0-StyledLink:hover::after,
.cache-1elb5m0-StyledLink:focus::after {
  background-color: #a6102d;
}

.cache-1elb5m0-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-1elb5m0-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render info 1`] = `
<DocumentFragment>
  .cache-fo68qk-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-fo68qk-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-fo68qk-StyledLink>* {
  pointer-events: none;
}

.cache-fo68qk-StyledLink:hover,
.cache-fo68qk-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #1a4dbf;
  text-decoration-color: #1a4dbf;
}

.cache-fo68qk-StyledLink:hover .e4bq1r52,
.cache-fo68qk-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-fo68qk-StyledLink:hover::after,
.cache-fo68qk-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.cache-fo68qk-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-fo68qk-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render neutral 1`] = `
<DocumentFragment>
  .cache-ibris0-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #4a4f62;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-ibris0-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-ibris0-StyledLink>* {
  pointer-events: none;
}

.cache-ibris0-StyledLink:hover,
.cache-ibris0-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #4a4f62;
  text-decoration-color: #4a4f62;
}

.cache-ibris0-StyledLink:hover .e4bq1r52,
.cache-ibris0-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-ibris0-StyledLink:hover::after,
.cache-ibris0-StyledLink:focus::after {
  background-color: #4a4f62;
}

.cache-ibris0-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-ibris0-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render primary 1`] = `
<DocumentFragment>
  .cache-qjioss-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-qjioss-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-qjioss-StyledLink>* {
  pointer-events: none;
}

.cache-qjioss-StyledLink:hover,
.cache-qjioss-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-qjioss-StyledLink:hover .e4bq1r52,
.cache-qjioss-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-qjioss-StyledLink:hover::after,
.cache-qjioss-StyledLink:focus::after {
  background-color: #390171;
}

.cache-qjioss-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-qjioss-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render success 1`] = `
<DocumentFragment>
  .cache-136870y-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #149a7b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-136870y-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-136870y-StyledLink>* {
  pointer-events: none;
}

.cache-136870y-StyledLink:hover,
.cache-136870y-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #149a7b;
  text-decoration-color: #149a7b;
}

.cache-136870y-StyledLink:hover .e4bq1r52,
.cache-136870y-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-136870y-StyledLink:hover::after,
.cache-136870y-StyledLink:focus::after {
  background-color: #149a7b;
}

.cache-136870y-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-136870y-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render warning 1`] = `
<DocumentFragment>
  .cache-1ibb6nj-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #cc4e18;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-1ibb6nj-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-1ibb6nj-StyledLink>* {
  pointer-events: none;
}

.cache-1ibb6nj-StyledLink:hover,
.cache-1ibb6nj-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #cc4e18;
  text-decoration-color: #cc4e18;
}

.cache-1ibb6nj-StyledLink:hover .e4bq1r52,
.cache-1ibb6nj-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-1ibb6nj-StyledLink:hover::after,
.cache-1ibb6nj-StyledLink:focus::after {
  background-color: #cc4e18;
}

.cache-1ibb6nj-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="cache-1ibb6nj-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;
